@@ -1,5 +1,7 @@
 
 Changelog for SEMS 
+ - support for setting the URI of a session in SDP
+
  - early media receiving example
 
  - support for posting events into conferences
